DevOrg/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Custom_link__c</fullName>
        <label>Custom link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Inactive_Date__c</fullName>
        <label>Inactive Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <label>Manager&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>User_Manager__c</fullName>
        <label>User Manager</label>
        <relationshipName>UserManager</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>